# AI-Showcase-Volumetric-Experiment

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  NOTICE.txt  NuGet.config  README.md  planning.md
.github/workflows/: BuildCppSamples.yml  BuildCsSamples.yml
Research/: AI Chat Logs (4-16-26).md  AI SDK Findings.md  fix-log.md
assets/: Chess_Set.glb  ClockThumbnail.glb  NOTE.md  Simple.gltf  TeaSet.glb  axis_xyz_rub.glb  brass_vase.glb  clock.glb  corrupted.glb  cube-blue.glb  cube-red.glb  world.glb
assets/shapes/: cone.glb  cube.glb  cylinder.glb  pyramid.glb  sphere.glb  template.glb
cpp/: .clang-format  .gitignore  CMakeLists.txt
cpp/.specs/: SPEC.md
cpp/include/: CMakeLists.txt
cpp/include/VaAbi/: CMakeLists.txt
cpp/include/VaAbi/volumetric/: volumetric.h  volumetric_loader_default.h  volumetric_loader_interface.h  volumetric_platform_defines.h  volumetric_reflection.h
cpp/include/VaUtility/: CMakeLists.txt  vaCtor.h  vaEnums.h  vaError.h  vaExtensions.h  vaFlags.h  vaFunctions.h  vaMath.h  vaString.h  vaUuid.h  vaVersion.h  vaWindows.h
cpp/include/VolumetricCppLibrary/: CMakeLists.txt  VolumetricApp.h
cpp/include/VolumetricCppLibrary/api/: vaApp.h  vaElement.h  vaInput.h  vaVolume.h
cpp/include/VolumetricCppLibrary/detail/: vaApp.inl  vaSession.h  vaSession.inl  vaVolume.inl
cpp/include/VolumetricCppLibrary/detail/components/: vaAppContext.h  vaElementList.h
cpp/include/VolumetricCppLibrary/detail/elements/: vaAdaptiveCard.inl  vaElement.inl  vaInput.inl  vaMaterialResource.inl  vaMeshResource.inl  vaModelResource.inl  vaTextureResource.inl  vaVisualElement.inl
cpp/samples/: CMakeLists.txt
cpp/samples/Clock/: CMakeLists.txt  main.cpp
cpp/samples/HelloWorld/: CMakeLists.txt  main.cpp
cpp/samples/MeshEdit/: CMakeLists.txt  main.cpp
cpp/samples/ModelViewer/: CMakeLists.txt  FileCollection.cpp  FileCollection.h  main.cpp
cpp/samples/MultipleVolumes/: CMakeLists.txt  main.cpp
cpp/samples/NamedNodes/: CMakeLists.txt  main.cpp
cpp/samples/SampleShared/: CMakeLists.txt  SampleMathHelpers.h  SampleTraceHelpers.cpp  SampleTraceHelpers.h
cpp/samples/SampleShared/SampleMesh/: GlbEmitter.cpp  GlbEmitter.h  MeshData.h  MeshGenerator.cpp  MeshGenerator.h  PulseGrid.cpp  PulseImpactSphere.cpp  WaveformMesh.cpp
cpp/samples/SpatialInputs/: CMakeLists.txt  main.cpp
cpp/samples/SpinningCube/: CMakeLists.txt  main.cpp
cs/: .gitignore  Directory.Packages.props
cs/Samples/: CsSamples.slnx
cs/Samples/Boids/: App.xaml  App.xaml.cs  Boid.cs  BoidManager.cs  BoidsVolume.cs  CsBoids.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  boid.glb
cs/Samples/Boids/Properties/: launchSettings.json
cs/Samples/Clock/: CsClock.csproj  Program.cs
cs/Samples/CsProductConfigurator/: App.xaml  App.xaml.cs  ConfigPage.xaml  ConfigPage.xaml.cs  CsProductConfigurator.csproj  Data.cs  HeadphonesVolume.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  VolumetricExperience.cs  app.manifest
cs/Samples/CsProductConfigurator/Properties/: launchSettings.json
cs/Samples/GltfViewer/: CsGltfViewer.csproj  MainForm.cs  Program.cs  app.manifest
cs/Samples/HelloWorld/: CsHelloWorld.csproj  Program.cs
cs/Samples/MaterialExplorer/: App.xaml  App.xaml.cs  CsMaterialExplorer.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  ValueConverters.cs  ViewModel.cs  VolumetricModel.cs  app.manifest
cs/Samples/MaterialExplorer/Properties/: launchSettings.json
cs/Samples/MultipleVolumes/: CsMultipleVolumes.csproj  Program.cs
cs/Samples/NamedNodes/: CsNamedNodes.csproj  Program.cs
cs/Samples/ShapeSpawner/: ColorHelper.cs  Constants.cs  CsShapeSpawner.csproj  DesktopTestMode.cs  HandInteractionManager.cs  LabelManager.cs  LabelTextureCache.cs  ProceduralMeshes.cs  Program.cs  ShapeManager.cs  ShapeSpawnerVolume.cs  SpawnedShape.cs  WireframeManager.cs
cs/Samples/SpatialInputs/: CsSpatialInputs.csproj  Program.cs  SpatialInputs.cs
cs/Samples/SpatialPad/: App.xaml  App.xaml.cs  Data.cs  DesignPage.xaml  DesignPage.xaml.cs  KeypadData.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  SettingsManager.cs  ShortcutsManager.cs  Slot.cs  SpatialPad.csproj  SpatialPadVolume.cs  VolumetricExperience.cs  VolumetricSlot.cs  app.manifest
cs/Samples/SpatialPad/Helpers/: BooleanToVisibilityConverter.cs  InvertBoolConverter.cs  PadNumberConverter.cs  SelectedToBrushConverter.cs  SelectedToForegroundConverter.cs
cs/Samples/SpatialPad/Properties/: launchSettings.json
cs/Samples/SpinningCube/: CsSpinningCube.csproj  Program.cs
cs/Samples/VolumetricMusicPlayer/: App.xaml  App.xaml.cs  CapturableView.xaml  CapturableView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  ThumbnailIcon.glb  VisualizationVolume.cs  VolumetricAppManager.cs  VolumetricMusicPlayer.csproj  XamlSnapshot.cs  app.manifest  scene.glb
cs/Samples/VolumetricMusicPlayer/Properties/: launchSettings.json
cs/Samples/VolumetricMusicPlayer/Visualization/: BasicSpectrumProvider.cs  GradientCalculator.cs  ISpectrumProvider.cs  LineSpectrum.cs  ScalingStrategy.cs  SpectrumBase.cs  VoicePrint3DSpectrum.cs  cscore-Samples.url
cs/UnitySamples/: .gitignore
cs/UnitySamples/VolumetricPlayground/: .gitignore
cs/UnitySamples/com.microsoft.mixedreality.volumetric/: .gitignore  .npmrc  CHANGELOG.md  package.json
python/: .gitignore  .pylintrc
python/.specs/: SPEC.md
python/package/: install.cmd  setup.py
python/package/volumetric/: .pylintrc  __init__.py  api.py  api_gen.py
python/samples/: requirements.txt
python/samples/boids/: boid.glb  boids_flat.py  boids_volumetric.py
python/samples/clock/: clock.py
python/samples/hello_world/: hello_world.py
python/samples/model_viewer/: model_viewer.py
python/samples/multiple_volumes/: multiple_volumes.py
python/samples/product_configurator/: product_configurator.py
python/samples/spinning_cube/: spinning_cube.py
tools/: README.md  VaSDK.Continuous.wprp  VaSDK.Perf.wprp  VaSDK.wprp  generate_shapes.py  generate_template.py
(+149 files in other folders)
